--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--Boxes-->
     <section class="p-5">
         <div class="container">
-            <div class="row text-center">
+            <div class="row text-center g-4">
                 <div class="col-md">
                     <div class="card bg-dark text-light">
                         <div class="card-body text-center">
@@ -124,6 +124,54 @@
         </div>
     </section>
     <!--Boxes-->
+
+    <!--Learn section-->
+    <section class="p-5" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-items-between">
+                <div class="col-md">
+                    <img src="Media/fundamentals.svg" alt="" class="img-fluid">
+                </div>
+                <div class="col-md p-5">
+                    <h2>Learn The Fundamentals</h2>
+                    <p class="lead">
+                        "HTML structures. CSS styles. JS animates. Web thrives. Together, they shape the digital world, an interactive canvas of endless possibilities."
+                    </p>
+                    <p>
+                        "HTML creates content structure. CSS styles appearance. JS adds interactivity. Bootstrap streamlines design. Together, they form dynamic, visually appealing, and user-friendly websites and applications."
+                    </p>
+                    <a href="#" class="btn btn-dark mt-3">
+                        <i class="bi bi-chevron-right"></i>
+                        Read More
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="p-5 bg-dark text-light" id="learn">
+        <div class="container">
+            <div class="row align-items-center justify-items-between">
+                <div class="col-md p-5">
+                    <h2>Learn React</h2>
+                    <p class="lead">
+                        "React: Efficient, declarative, component-based JavaScript library for building engaging, scalable, and interactive user interfaces in web development."
+                    </p>
+                    <p>
+                        "React: Building user interfaces with reusable components, efficient rendering, state management, and virtual DOM, making complex UIs more manageable and performant in modern web development."
+                    </p>
+                    <a href="#" class="btn btn-light mt-3">
+                        <i class="bi bi-chevron-right"></i>
+                        Read More
+                    </a>
+                </div>
+                <div class="col-md">
+                    <img src="Media/react.svg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Learn section-->
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
