--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Frontend Bootcamp</title>
     <link rel="stylesheet" href="index.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
+
 <body>
 
     <div class="device-size-display">
         <span id="device-size"> </span>
     </div>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
         <div class="container">
             <a href="" class="navbar-brand">Frontend Bootcamp</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
@@ -23,14 +26,14 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                         <a href="#learn" class="nav-link">What You'll Learn</a>
+                        <a href="#learn" class="nav-link">What You'll Learn</a>
                     </li>
                     <li class="nav-item">
                         <a href="#questions" class="nav-link">Questions</a>
-                   </li>
-                   <li class="nav-item">
-                    <a href="#instructors" class="nav-link">Instructors</a>
-               </li>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#instructors" class="nav-link">Instructors</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -62,7 +65,7 @@
                 <div class="input-group news-input">
                     <input type="text" class="form-control" placeholder="Enter Email">
                     <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Button</button>
-                  </div>
+                </div>
             </div>
         </div>
     </section>
@@ -82,7 +85,8 @@
                                 Virtual
                             </div>
                             <p class="card-text">
-                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this is the artistry of a laptop, where ideas become reality."
+                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this
+                                is the artistry of a laptop, where ideas become reality."
                             </p>
                             <a href="" class="btn btn-primary">Read more</a>
                         </div>
@@ -98,7 +102,8 @@
                                 Hybrid
                             </div>
                             <p class="card-text">
-                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this is the artistry of a laptop, where ideas become reality."
+                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this
+                                is the artistry of a laptop, where ideas become reality."
                             </p>
                             <a href="" class="btn btn-dark">Read more</a>
                         </div>
@@ -114,7 +119,8 @@
                                 In person
                             </div>
                             <p class="card-text">
-                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this is the artistry of a laptop, where ideas become reality."
+                                "Unleashing creativity, one keystroke at a time, on the canvas of a digital world—this
+                                is the artistry of a laptop, where ideas become reality."
                             </p>
                             <a href="" class="btn btn-primary">Read more</a>
                         </div>
@@ -135,10 +141,13 @@
                 <div class="col-md p-5">
                     <h2>Learn The Fundamentals</h2>
                     <p class="lead">
-                        "HTML structures. CSS styles. JS animates. Web thrives. Together, they shape the digital world, an interactive canvas of endless possibilities."
+                        "HTML structures. CSS styles. JS animates. Web thrives. Together, they shape the digital world,
+                        an interactive canvas of endless possibilities."
                     </p>
                     <p>
-                        "HTML creates content structure. CSS styles appearance. JS adds interactivity. Bootstrap streamlines design. Together, they form dynamic, visually appealing, and user-friendly websites and applications."
+                        "HTML creates content structure. CSS styles appearance. JS adds interactivity. Bootstrap
+                        streamlines design. Together, they form dynamic, visually appealing, and user-friendly websites
+                        and applications."
                     </p>
                     <a href="#" class="btn btn-dark mt-3">
                         <i class="bi bi-chevron-right"></i>
@@ -155,10 +164,13 @@
                 <div class="col-md p-5">
                     <h2>Learn React</h2>
                     <p class="lead">
-                        "React: Efficient, declarative, component-based JavaScript library for building engaging, scalable, and interactive user interfaces in web development."
+                        "React: Efficient, declarative, component-based JavaScript library for building engaging,
+                        scalable, and interactive user interfaces in web development."
                     </p>
                     <p>
-                        "React: Building user interfaces with reusable components, efficient rendering, state management, and virtual DOM, making complex UIs more manageable and performant in modern web development."
+                        "React: Building user interfaces with reusable components, efficient rendering, state
+                        management, and virtual DOM, making complex UIs more manageable and performant in modern web
+                        development."
                     </p>
                     <a href="#" class="btn btn-light mt-3">
                         <i class="bi bi-chevron-right"></i>
@@ -172,7 +184,45 @@
         </div>
     </section>
     <!--Learn section-->
-      
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <!--Question section-->
+    <section class="p-5" id="questions">
+        <div class="container">
+            <h2 class="text-center mt-3">Frequntly Asked Questions</h2>
+
+            <div class="accordion accordion-flush" id="questions">
+                <!--Item 1-->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne">
+                            Where exactly are you located?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">"HTML, CSS, JavaScript, Bootstrap: <code> Foundations of web design. </code>Learn, innovate, and craft the digital future with creativity and code."</div>
+                    </div>
+                </div>
+                <!--Item 1-->
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo">
+                            What do I need to know?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#questions">
+                        <div class="accordion-body">"A beginner seeks to grasp HTML, CSS, JavaScript, and Bootstrap—the <code>fundamental tools</code> for building, styling, and enhancing websites. Curiosity ignites learning."</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Question section-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
