--- a/index.html
+++ b/index.html
@@ -290,6 +290,33 @@
     </section>
     <!--Instructors-->
 
+    <!--Contact & Map-->
+    <section class="p-5">
+        <div class="container">
+            <div class="row g-4 text-center">
+                
+                    <h2 class="text-center mb-4">Contact Info</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">
+                            <span class="fw-bold">Main Location : </span> River road north street 
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Building Name : </span> High tower 
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Enrollment No : </span> 999-765-453
+                        </li>
+                        <li class="list-group-item">
+                            <span class="fw-bold">Email : </span> frontenddev@gmail.com 
+                        </li>
+                    </ul>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+    <!--Contact & Map-->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
