--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                     <li class="nav-item">
                         <a href="#instructors" class="nav-link">Instructors</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#contact" class="nav-link">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -49,7 +52,7 @@
                     <p class="lead">
                         "Coding is the art of turning coffee into code, fueled by passion and powered by logic."
                     </p>
-                    <button class="btn btn-primary btn-lg my-4">Start The Enrollment</button>
+                    <button class="btn btn-primary btn-lg my-4" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
                 </div>
                 <img src="Media/showcase.svg" class="img-fluid w-50 d-none d-sm-block" alt="">
             </div>
@@ -63,7 +66,7 @@
                     Sign Up For Our Newsletter
                 </h3>
                 <div class="input-group news-input">
-                    <input type="text" class="form-control" placeholder="Enter Email">
+                    <input type="email" class="form-control" placeholder="Enter Email">
                     <button class="btn btn-dark btn-lg" type="button" id="button-addon2">Button</button>
                 </div>
             </div>
@@ -221,7 +224,7 @@
     <!--Question section-->
 
     <!--Instructors-->
-    <section class="p-5 bg-primary" id="instrcutors">
+    <section class="p-5 bg-primary" id="instructors">
         <div class="container">
             <h2 class="text-center text-white">
                 Our Instructors
@@ -291,7 +294,7 @@
     <!--Instructors-->
 
     <!--Contact & Map-->
-    <section class="p-5">
+    <section class="p-5" id="contact">
         <div class="container">
             <div class="row g-4 text-center">
                 
@@ -316,6 +319,63 @@
         </div>
     </section>
     <!--Contact & Map-->
+
+    <!--Footer section-->
+    <footer class="p-3 bg-dark text-center text-white position-relative">
+            <div class="container">
+                <p class="lead">Copyright &copy; 2023 frontend Bootcamp</p>
+                <a href="#" class="position-absolute bottom-0 end-0 p-3">
+                    <i class="bi bi-arrow-up-circle h1"></i>
+                </a>
+            </div>
+    </footer>
+    <!--Footer section-->
+
+    <!-- Modal -->
+    <div class="modal fade" id="enroll" tabindex="-1" aria-labelledby="enrollLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h1 class="modal-title fs-5" id="enrollLabel">Modal title</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+            <p class="lead">Fill out this form and we will get back to you</p>
+            <form novalidate class="was-validated">
+                <div class="mb-3">
+                    <label for="first-name" class="col-form-label">
+                        First Name :
+                    </label>
+                    <input type="text" class="form-control" id="first-name">
+                </div>
+                <div class="mb-3">
+                    <label for="last-name" class="col-form-label">
+                        Last Name :
+                    </label>
+                    <input type="text" class="form-control" id="last-name">
+                </div>
+                <div class="mb-3">
+                    <label for="email" class="col-form-label">
+                        Email :
+                    </label>
+                    <input type="email" class="form-control" id="email">
+                </div>
+                <div class="mb-3">
+                    <label for="phone" class="col-form-label">
+                        Phone :
+                    </label>
+                    <input type="tel" class="form-control" id="phone">
+                </div>
+            </form>
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+        </div>
+    </div>
+  <!-- Modal -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
