--- a/index.html
+++ b/index.html
@@ -341,36 +341,36 @@
             </div>
             <div class="modal-body">
             <p class="lead">Fill out this form and we will get back to you</p>
-            <form novalidate class="was-validated">
+            <form novalidate class="was-validated" method="post" action="https://script.google.com/macros/s/AKfycbw-_06QquR-Pyjlxb9RGW0uJw3jHDYZwhXhnTUvVES2uHz45uevkcUtw3OHvK7EAtAiIw/exec">
                 <div class="mb-3">
                     <label for="first-name" class="col-form-label">
                         First Name :
                     </label>
-                    <input type="text" class="form-control" id="first-name">
+                    <input type="text" class="form-control" id="first-name" name="first-name">
                 </div>
                 <div class="mb-3">
                     <label for="last-name" class="col-form-label">
                         Last Name :
                     </label>
-                    <input type="text" class="form-control" id="last-name">
+                    <input type="text" class="form-control" id="last-name" name="last-name">
                 </div>
                 <div class="mb-3">
                     <label for="email" class="col-form-label">
                         Email :
                     </label>
-                    <input type="email" class="form-control" id="email">
+                    <input type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="mb-3">
                     <label for="phone" class="col-form-label">
                         Phone :
                     </label>
-                    <input type="tel" class="form-control" id="phone">
+                    <input type="tel" class="form-control" id="phone" name="phone">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <input type="submit" class="btn btn-primary" value="Submit"></input>
                 </div>
             </form>
-            </div>
-            <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
         </div>
